--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@
     left: 0;
     width: 100px;
     height: 15px;
-    background: #FFFFFF;
+    background:#FFFFFF;
 }
 
 .header-carousel .container::after,
@@ -289,7 +289,7 @@
 .video {
     position: relative;
     padding: 8rem 0 12rem 0;
-    background: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)), url(../img/camerafoot.jpg) center center no-repeat;
     background-size: cover;
     display: flex;
     flex-direction: column;
