--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 /********** Page CSS **********/
 :root {
-    --primary: #1E60AA;
+    --primary: #133F4C;
     --secondary: #FF4917;
     --light: #EDF1FC;
-    --dark: #17224D;
+    --dark: #133F4C;
 }
 
 .fw-medium {
