Modify primary and dark color variables
Updated primary and dark color variables for customization.

--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,9 +1,9 @@
 /******* Customized Bootstrap ********/
 
-$primary: #1E60AA;
+$primary: #133F4C;
 $secondary: #FF4917;
 $light: #EDF1FC;
-$dark: #17224D;
+$dark: #133F4C;
 
 $font-family-base: 'Inter', sans-serif;
 
